--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,28 +1,33 @@
 <div class="row">
-  <div class="col-md-6">
-    <h3>Day 1</h3>
-    <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
-    </table>
+    <div class="col-md-6">
+      <h3>March 18, 2019</h3>
+      <table class="table table-striped">
+        <tr> <td>08:30</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> & Breakfast </td> </tr>
+        <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Automating tasks with the Unix shell</a></td> </tr>
+        <tr> <td>10:30</td>  <td>Break</td> </tr>
+        <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/shell-novice/">Continuing Unix shell lesson</a></td> </tr>
+        <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+        <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
+        <tr> <td>14:30</td>  <td>Break</td> </tr>
+        <tr> <td>14:45</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td> </tr>
+        <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+        <tr> <td>16:30</td>  <td>END</td> </tr>
+      </table>
+    </div>
+    <div class="col-md-6">
+      <h3>March 19, 2019</h3>
+      <table class="table table-striped">
+        <tr> <td>08:30</td> <td> Breakfast </td> </tr>
+        <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation/">Python Continued</a></td> </tr>
+        <tr> <td>10:30</td>  <td>Break</td> </tr>
+        <tr> <td>10:45</td>  <td><a href="http://swcarpentry.github.io/python-novice-inflammation/">Python Continued</a></td> </tr>
+        <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
+        <tr> <td>13:00</td>  <td> <a href="http://swcarpentry.github.io/git-novice/"> Version control with Git </a> </td> </tr>
+        <tr> <td>14:30</td>  <td>Break</td> </tr>
+        <tr> <td>14:45</td>  <td> <a href="http://swcarpentry.github.io/git-novice/"> Git Continued </a> </td> </tr>
+        <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+        <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
+        <tr> <td>16:40</td>  <td>END</td> </tr>
+      </table>
+    </div>
   </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.swc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
-    </table>
-  </div>
-</div>
